@@ -1,3 +1,6 @@
+ -- Deprecate pbx_wilcalu and app_qcall in favor of pbx_spool
+ -- Remove old chan_iax and chan_vofr
+ -- Major Caller*ID Restructuring
 Asterisk 1.0.1
  -- Added AGI over TCP support
  -- Add ability to purge callers from queue if no agents are logged in
